--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "prettierインストールのため入れた",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit": "lint-staged"
   },
   "repository": {
     "type": "git",
